deploy/ring-promoter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ring-promoter
  namespace: wslproxy-ring-promoter
  labels:
    app: ring-promoter
spec:
  selector:
    app: ring-promoter
  ports:
    - name: http
      port: 80
      targetPort: http
  type: ClusterIP
